add three api
